[gd_scene load_steps=5 format=3 uid="uid://cqe20tgodro5y"]

[ext_resource type="Script" path="res://descartados/menu_config.gd" id="1_xf3fo"]
[ext_resource type="Texture2D" uid="uid://drjkd7gnmpw3y" path="res://assets/bcaf52a0-a653-4a54-a1a7-5b1df73bf922_2.png" id="2_puybj"]
[ext_resource type="Theme" uid="uid://bx5ew11l5r0ch" path="res://temas/config_menu.tres" id="3_fjlvp"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wjly6"]
texture = ExtResource("2_puybj")

[node name="CanvasLayer" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xf3fo")

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
theme_override_styles/panel = SubResource("StyleBoxTexture_wjly6")
metadata/_edit_use_anchors_ = true

[node name="Menu1" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu1"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("3_fjlvp")
metadata/_edit_use_anchors_ = true

[node name="Voltar" type="Button" parent="Control/Menu1/VBoxContainer"]
layout_mode = 2
text = "Voltar
"

[node name="Audio" type="Button" parent="Control/Menu1/VBoxContainer"]
layout_mode = 2
text = "Áudio"

[node name="Video" type="Button" parent="Control/Menu1/VBoxContainer"]
layout_mode = 2
text = "Vídeo
"

[node name="Controles" type="Button" parent="Control/Menu1/VBoxContainer"]
layout_mode = 2
text = "Controles"

[node name="Idiomas" type="Button" parent="Control/Menu1/VBoxContainer"]
layout_mode = 2
text = "idiomas
"

[node name="Menu2" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.66667
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/Menu2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme = ExtResource("3_fjlvp")

[node name="Voltarmenus" type="Button" parent="Control/Menu2/VBoxContainer"]
layout_mode = 2
text = "Voltar
"

[node name="HSlider" type="HSlider" parent="Control/Menu2/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="Control/Menu1/VBoxContainer/Voltar" to="Control" method="_on_voltar_pressed"]
[connection signal="pressed" from="Control/Menu2/VBoxContainer/Voltarmenus" to="Control" method="_on_voltarmenus_pressed"]
[connection signal="pressed" from="Control/Menu2/VBoxContainer/Voltarmenus" to="Control" method="_on_voltar_pressed"]
